# ActiveLearningDemo

./: README.md  pyproject.toml
src/: create_gif.py
src/deploy/: server.py
src/deploy/static/: app.js  gifs  index.html  styles.css
src/python_app/: demonstrator.py  leaderboard.py  main.py
tests/: test_server.py
