[project]
name = "streamlit-demonstrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "st-click-detector>=0.1.3",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.46.0",
]
